Remove IllegalNativeAccessChecker